@@ -119,7 +119,7 @@ metricbeat.modules:
 
 #-------------------------------- Ceph Module --------------------------------
 - module: ceph
-  metricsets: ["cluster_disk", "cluster_health", "monitor_health", "pool_disk"]
+  metricsets: ["cluster_disk", "cluster_health", "monitor_health", "pool_disk", "osd_tree"]
   period: 10s
   hosts: ["localhost:5000"]
 
