@@ -1,0 +1,56 @@
+{
+    "output": {
+        "nodes": [
+            {
+                "children": [
+                    -3
+                ],
+                "id": -1,
+                "name": "default",
+                "type": "root",
+                "type_id": 10
+            },
+            {
+                "children": [
+                    1,
+                    0
+                ],
+                "id": -3,
+                "name": "ceph-mon1",
+                "pool_weights": {},
+                "type": "host",
+                "type_id": 1
+            },
+            {
+                "crush_weight": 0.048691,
+                "depth": 2,
+                "device_class": "hdd",
+                "exists": 1,
+                "id": 0,
+                "name": "osd.0",
+                "pool_weights": {},
+                "primary_affinity": 1.0,
+                "reweight": 1.0,
+                "status": "up",
+                "type": "osd",
+                "type_id": 0
+            },
+            {
+                "crush_weight": 0.048691,
+                "depth": 2,
+                "device_class": "hdd",
+                "exists": 1,
+                "id": 1,
+                "name": "osd.1",
+                "pool_weights": {},
+                "primary_affinity": 1.0,
+                "reweight": 1.0,
+                "status": "up",
+                "type": "osd",
+                "type_id": 0
+            }
+        ],
+        "stray": []
+    },
+    "status": "OK"
+}
