@@ -1,0 +1,3 @@
+=== Ceph cluster_health metricset
+
+This is the `osd_tree` metricset of the Ceph module.
