@@ -1,0 +1,57 @@
+- name: osd_tree
+  type: group
+  description: >
+    ceph osd tree info
+  fields:
+    - name: id
+      type: long
+      description: >
+        osd or bucket node id
+    - name: name
+      type: text
+      description: >
+        osd or bucket node name
+    - name: type
+      type: keyword
+      description: >
+        osd or bucket node type, illegal type include osd, host, root etc.
+    - name: type_id
+      type: long
+      description: >
+        osd or bucket node typeID
+    - name: children
+      type: text 
+      description: >
+        bucket children list, seperate by comma.
+    - name: crush_weight
+      type: float
+      description: >
+        osd node crush weight
+    - name: depth
+      type: long
+      description: >
+        node depth
+    - name: exists
+      type: boolean
+      description: >
+        is node still exist or not(1-yes, 0-no)
+    - name: primary_affinity
+      type: float
+      description: >
+        the weight of reading data from primary osd
+    - name: reweight
+      type: long
+      description: >
+        the reweight of osd
+    - name: status
+      type: keyword 
+      description: >
+        status of osd, it should be up or down
+    - name: device_class
+      type: keyword
+      description: >
+        the device class of osd, like hdd, ssd etc.
+    - name: father
+      type: keyword 
+      description: >
+        the parent node of this osd or bucket node
